EXTRA_DIST = $(geomdata_DATA)

# Current automake (version 1.4) will not create directory "b" if
# "a/b/foo" is listed in a _DATA variable.
#
#
# We can hack our way around this by taking advantage of the fact that
# automake will install the various *_DATA files in order of the
# variable name.

aaaa1dir = $(geomdatadir)/geom
aaaa2dir = $(geomdatadir)/geom/pieces
aaaa3dir = $(geomdatadir)/geom/polyhedra
aaaa4dir = $(geomdatadir)/geom/spherical
aaaa5dir = $(geomdatadir)/geom/textured

aaaa1_DATA =
aaaa2_DATA =
aaaa3_DATA =
aaaa4_DATA =
aaaa5_DATA =

geomdata_DATA = \
	.geomview \
	cmap.fmap \
	geom/HingeCube \
	geom/HingeDiamond \
	geom/HingeDodec \
	geom/HingeLongcube \
	geom/HingeTetra \
	geom/HingeTriangle \
	geom/abstr.off \
	geom/alphabet.vect \
	geom/antoine0.oogl \
	geom/antoine1.oogl \
	geom/antoine2.oogl \
	geom/antoine3.oogl \
	geom/axes.list \
	geom/br2.grp \
	geom/br2.off \
	geom/br4.2 \
	geom/br4fd.grp \
	geom/br4fd.list \
	geom/cam.off \
	geom/camera-frustum \
	geom/catenoid \
	geom/cone.off \
	geom/csquare.quad \
	geom/cube \
	geom/cube.off \
	geom/diamond \
	geom/dodec \
	geom/dodec.off \
	geom/dodec.quad \
	geom/dodec.vect \
	geom/dodec2.off \
	geom/facecube.off \
	geom/flythrough_diagram.gv \
	geom/hdodec.off \
	geom/helicoid \
	geom/hypercube.off \
	geom/ico.grp \
	geom/icosa.off \
	geom/icosa.quad \
	geom/jungle.list \
	geom/klein8 \
	geom/link2.grp \
	geom/link8.grp \
	geom/moebius.4d.mesh \
	geom/mushroom.off \
	geom/nsquare.quad \
	geom/octa.off \
	geom/octant.bez \
	geom/office.oogl \
	geom/pieces/cube1.off \
	geom/pieces/linkA.bez \
	geom/pieces/linkB.bez \
	geom/polyhedra/cube \
	geom/polyhedra/cuboctahedron \
	geom/polyhedra/dodecahedron \
	geom/polyhedra/icosahedron \
	geom/polyhedra/icosidodecahedron \
	geom/polyhedra/octahedron \
	geom/polyhedra/rhombicosidodecahedron \
	geom/polyhedra/rhombicuboctahedron \
	geom/polyhedra/rhombitruncated_cubeoctahedron \
	geom/polyhedra/rhombitruncated_icosidodecahedron \
	geom/polyhedra/snub_cube \
	geom/polyhedra/snub_dodecahedron \
	geom/polyhedra/tetrahedron \
	geom/polyhedra/truncated_cube \
	geom/polyhedra/truncated_dodecahedron \
	geom/polyhedra/truncated_icosahedron \
	geom/polyhedra/truncated_octahedron \
	geom/polyhedra/truncated_tetrahedron \
	geom/ref.inst \
	geom/ref.list \
	geom/ref1.grp \
	geom/ref2.list \
	geom/sample.mesh \
	geom/sph12.mesh \
	geom/sphere.mesh \
	geom/spherical/dodecaplex.off \
	geom/spherical/flattorus.mesh \
	geom/spherical/hypercube.off \
	geom/spherical/octaplex.off \
	geom/spherical/orthoplex.off \
	geom/spherical/ruledtorus.mesh \
	geom/spherical/simplex.off \
	geom/spherical/tetraplex.off \
	geom/spherical/twosided.flattorus \
	geom/square.quad \
	geom/teapot.bez \
	geom/tent.mesh \
	geom/tetra \
	geom/tetra.off \
	geom/textured/Antenna.geom \
	geom/textured/GCGball \
	geom/textured/dodec.off \
	geom/textured/lunar-t.oogl \
	geom/textured/rabbitball \
	geom/textured/rabbits.ppm.gz \
	geom/textured/square.off \
	geom/textured/themi.bez \
	geom/torus.bez \
	geom/torus3.oogl \
	geom/torus8.oogl \
	geom/trapezoid.4d.off \
	geom/tref.mesh \
	geom/tref.off \
	geom/tri.4d.vect \
	geom/tri.vect \
	geom/triangle \
	geom/twosidedsquare.quad \
	geom/unit.sphere \
	geom/unitcube.off \
	geom/vertcube.off \
	geom/warp.inst \
	geom/wraptent.mesh \
	geom/xwyezed.vect \
	geom/xyz.grp \
	geom/xyz.vect \
	geom/ztent.mesh
