INCLUDES = $(default_includes) $(MOTIFINCLUDE) $(X_CFLAGS)
EXTRA_DIST = Headers

noinst_LIBRARIES = libmib.a

libmib_a_SOURCES = \
    mibButton.c mibDrawArea.c mibFrame.c mibLabel.c mibList.c mibload.c mibMenu.c mibRadioBox.c mibScale.c mibScrollBar.c mibTextBig.c mibTextBox.c mibToggle.c \
    mibload.h mibwidgets.h
