INCLUDES = $(default_includes)
EXTRA_DIST = Headers

noinst_LTLIBRARIES = libtransform3.la

libtransform3_la_SOURCES = \
    ctm3align.c ctm3ortho.c ctm3persp.c ctm3perspfov.c ctm3rotate.c ctm3scale.c ctm3tetrad.c ctm3translate.c tm3adjoint.c tm3align.c tm3concat.c tm3conjugate.c tm3copy.c tm3dual.c tm3identity.c tm3invert.c tm3ortho.c tm3persp.c tm3perspfov.c tm3print.c tm3rotate.c tm3scale.c tm3stack.c tm3tetrad.c tm3translate.c tm3transpose.c tm3polardecomp.c \
    3d.h radians.h transform3.h transform.h
