INCLUDES = $(default_includes)

man_MANS = discgrp.5gv

EXTRA_DIST = Headers $(man_MANS)

noinst_LTLIBRARIES = libdg.la

libdg_la_SOURCES = \
    colormap.c complex.c dgbound.c dgclass.c dgconstraint.c dgcopy.c dgcreate.c dgdelete.c dgdirdom.c dgdraw.c dgenum.c dgevert.c dgmisc.c dgpick.c dgsave.c dgstream.c dgtransform.c dhpoint3.c matlist.c outstack.c polyhedron.c projective.c stack.c util.c weeks_dirdom.c xform.c \
    complex.h dgflag.h discgrp.h discgrpP.h enum.h extern.h options.h projective.h vec4.h winged_edge.h
