INCLUDES = $(default_includes)
EXTRA_DIST = Headers

noinst_LTLIBRARIES = libmesh.la

libmesh_la_SOURCES = \
    meshbound.c meshclass.c meshcopy.c meshcreate.c meshdelete.c meshdice.c meshdraw.c meshevert.c meshload.c meshnormal.c meshpick.c meshsave.c meshsphere.c meshtransform.c \
    meshflag.h mesh.h meshP.h
