INCLUDES = $(default_includes)

EXTRA_DIST = Headers

noinst_LIBRARIES = libmgx11.a

libmgx11_a_SOURCES = 		\
	mgx11.c			\
	mgx11clip.c		\
	mgx11dither.c		\
	mgx11draw.c		\
	mgx11render1.c		\
	mgx11render16.c		\
	mgx11render8.c		\
	mgx11shade.c		\
	mgx11visual.c		\
	mgx11windows.c		\
				\
	mgx11.h			\
	mgx11P.h		\
	mgx11render1.h		\
	mgx11render16.h		\
	mgx11render8.h		\
	mgx11shade.h		\
	mgx11windows.h
