INCLUDES = $(default_includes) $(X_CFLAGS)

EXTRA_DIST = Headers

noinst_LTLIBRARIES = libmgx11.la

libmgx11_la_SOURCES = 		\
	mgx11.c			\
	mgx11clip.c		\
	mgx11dither.c		\
	mgx11draw.c		\
	mgx11render1.c		\
	mgx11render16.c		\
	mgx11render8.c		\
	mgx11shade.c		\
	mgx11visual.c		\
	mgx11windows.c		\
	mgx11.h			\
	mgx11P.h		\
	mgx11render1.h		\
	mgx11render16.h		\
	mgx11render8.h		\
	mgx11shade.h		\
	mgx11windows.h
