INCLUDES = $(default_includes)
EXTRA_DIST = Headers

noinst_LTLIBRARIES = libooglutil.la

libooglutil_la_SOURCES =\
 error.c findfile.c fsa.c futil.c glob.c mallocp.c ppopen.c vvec.h\
 create.h fsa.h ooglutil.h porting.h ray.h surf.h \
 iobuffer.c iobuffer.h iobfutil.c malloc-debug.c dbllist.h freelist.h\
 time.c

